# projeto-optimizacao

./: .gitignore  Optimização Heurística [LCD] - Shortcut.lnk  pyproject.toml  readme.md
I/: rascunho.ipynb  resolucao.ipynb  texto.tex
I/modelo1/: modelo1.ipynb
I/modelo2/: modelo2.ipynb
I/modelo3/: modelo3.ipynb
I/modelo4/: modelo4.ipynb
I/preemp/: preemp.ipynb
I/relatorio/: relatorio.tex  texto.tex
II/: Rascunho.ipynb  pyproject.toml  tabu.ipynb
II/relatorio/: cover.typ  functions.typ  main.typ  proprieties.typ
