[tool.poetry]
name = "ii"
version = "1.0.0"
description = ""
authors = ["notPlancha <andre.plancha@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.13.2"
fslash = "^0.17.0"
pampy = "^0.3.0"
jupyter = "^1.0.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
