[tool.poetry]
name = "ii"
version = "1.0.0"
description = ""
authors = ["notPlancha <andre.plancha@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jupyter = "^1.0.0"
numpy = "^1.24.3"
pandas = "^2.0.2"
plotnine = "^0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
